src/test/ui/const-generics/min_const_generics/default_function_param.stderr
error[E0658]: default values for const generic parameters are experimental
  --> $DIR/default_function_param.rs:1:26
   |
LL | fn foo<const SIZE: usize = 5>() {}
   |                          ^^^
   |
   = note: see issue #44580 <https://github.com/rust-lang/rust/issues/44580> for more information
   = help: add `#![feature(const_generics_defaults)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
