src/test/ui/const-generics/min_const_generics/default_function_param.rs
fn foo<const SIZE: usize = 5>() {}
                      //~^ ERROR expected one of `!`, `(`, `+`, `,`, `::`, `<`, or `>`, found `=`

fn main() {}
